--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sparta!</title>
+	<title>Meow!</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-This is Sparta!
+<h1>     </h1>
+<h3 class="intro" id="mainHeading">Beware!</h3>
+<p class="intro">Space cat! destroyer of worlds!</p>
+<img src="cat.jpg" alt="Instert spacecat.jpg" width="500" height="400">
+<hr>
+<ul class="intro">
+  <li>This</li>
+  <li>is</li>
+  <li>a</li>
+  <li>list</li>
+  <button>Press to summon!</button>
+  <a href="www.google.com">Do not press.</a>
+</ul>
 </body>
 </html>
