--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <li>is</li>
   <li>a</li>
   <li>list</li>
-  <button>Press to summon!</button>
+  <form action="main.html">
+    <input type="submit" value="Press to summon!" />
+</form>
   <a href="www.google.com">Do not press.</a>
 </ul>
 </body>
