--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <form action="main.html">
     <input type="submit" value="Press to summon!" />
 </form>
-  <a href="www.google.com">Do not press.</a>
+  <a href="https://www.google.com">Do not press.</a>
 </ul>
 </body>
 </html>
